--- a/src/styles/manajemen/Dashboard.scss
+++ b/src/styles/manajemen/Dashboard.scss
@@ -7,3 +7,288 @@
     overflow-y: scroll;
   }
 }
+
+.container-manajemen-dashboard{
+  background-color: #F4F7FC;
+  min-height: 100%;
+  padding: 17px 32px;
+  .manajemen-dashboard{
+    background-color: #FFFFFF;
+    box-shadow: 0px 5px 10px #F1F2FA;
+    border-radius: 8px;
+    width: 100%;
+    .tabs{
+      display: flex;
+      gap: 30px;
+      padding-top: 16px;
+      padding-left: 24px;
+      border-bottom: 1px solid #e5e5e5;
+      position: relative;
+      .tab-item{
+        color: #7E8287;
+        font-size: 14px;
+        font-weight: 600;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        padding-bottom: 14px;
+      }
+      .tab-item.active{
+        color: #017EFA;
+      }
+      .underline{
+        position: absolute;
+        background-color: #017EFA;
+        border-radius: 20px;
+        height: 5px;
+        bottom: -2.5px;
+        transition: 0.3s;
+      }
+      .underline.dashboard{
+        width: 122px;
+        left: 22px;
+      }
+      .underline.aktivitas{
+        width: 60px;
+        left: 171px;
+      }
+    }
+    .tab-contents{
+      .tab-content{
+        display: none;
+        .head-content{
+          padding: 24px;
+          display: flex;
+          flex-direction: column;
+          gap: 32px;
+          .row{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .in-out-content{
+              display: flex;
+              gap: 95px;
+              .in-out{
+                display: flex;
+                .img-wrapper{
+                  width: 64px;
+                  height: 64px;
+                  background-color: #e8ffec;
+                  border-radius: 8px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                }
+                .img-wrapper.blue{
+                  background-color: #E6F2FE;
+                }
+                .desc-wrapper{
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: flex-end;
+                  margin-left: 16px;
+                  .title{
+                    font-weight: 500;
+                    font-size: 16px;
+                    color: #7E8287;
+                  }
+                  .val{
+                    font-weight: 600;
+                    font-size: 40px;
+                    color: #1C1F37;
+                    display: flex;
+                    align-items: baseline;
+                    .label{
+                      font-size: 24px;
+                      margin-left: 6px;
+                    }
+                  }
+                }
+              }
+            }
+            .btn-download{
+              .wrapper{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                width: 172px;
+                height: 40px;
+                background-color: #017EFA;
+                border-radius: 6px;
+                color: #FFFFFF;
+                font-size: 14px;
+                img{
+                  margin-right: 6px;
+                  width: 17px;
+                  height: 40px;
+                }
+              }
+            }
+            .search{
+              width: 240px;
+              height: 40px;
+              background-color: #F5F5F5;
+              border-radius: 8px;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              padding: 0 12px;
+              input{
+                border: none;
+                background-color: transparent;
+                height: 100%;
+                font-size: 16px;
+                width: 88%;
+              }
+              input:focus-visible{
+                outline: none;
+              }
+              img{
+                cursor: pointer;
+              }
+            }
+            .dropdowns{
+              display: flex;
+              gap: 16px;
+              .filter{
+                width: 200px;
+                height: 40px;
+                background-color: #F5F5F5;
+                border-radius: 8px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 12px;
+                cursor: pointer;
+                div{
+                  display: flex;
+                  gap: 11px;
+                  p{
+                    color: #7E8287;
+                    font-size: 16px;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .head-content.activity{
+          padding-top: 41px;
+          padding-bottom: 40px;
+        }
+        .main-content{
+          .table-dashboard{
+            width: 100%;
+            td{
+              padding: 18px 24px;
+              font-size: 16px;
+              color: #31353B;
+            }
+            thead{
+              td{
+                font-weight: 600;
+                background-color: #F4F7FC;
+              }
+            }
+            tbody{
+              tr:nth-child(even){
+                background-color: #F4F7FC;
+              }
+              td{
+                .status-wrapper{
+                  width: 70px;
+                  height: 27px;
+                  border-radius: 16px;
+                  color: #FFFFFF;
+                  font-weight: 600;
+                  font-size: 12px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                }
+                .status-wrapper.masuk{
+                  background-color: #30DA88;
+                }
+                .status-wrapper.keluar{
+                  background-color: #57A4F0;
+                }
+                .action-wrapper{
+                  cursor: pointer;
+                }
+              }
+            }
+          }
+          .activity-items{
+            padding: 0 24px 24px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            .date{
+              font-weight: 600;
+              font-size: 16px;
+              color: #31353B;
+              margin-bottom: 16px;
+            }
+            .activity-item{
+              box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+              border-radius: 5px;
+              padding: 16px 12px 12px 16px; 
+
+              .item-row{
+                margin-bottom: 35px;
+                border-bottom: 1px solid #e5e5e5;
+                padding-bottom: 12px;
+                .item-details{
+                  display: flex;
+                  align-items: center;
+                  .img-wrapper{
+                    width: 70px;
+                    height: 70px;
+                    position: relative;
+                    overflow: hidden;
+                    border-radius: 8px;
+                    margin-right: 16px;
+                    img{
+                      position: absolute;
+                      width: 100%;
+                      height: 100%;
+                    }
+                  }
+                  .desc{
+                    display: flex;
+                    p{
+                      margin-right: 5px;
+                    }
+                    .actor, .value{
+                      font-weight: 600;
+                    }
+                    .item{
+                      color: #017EFA;
+                      text-decoration: underline;
+                      cursor: pointer;
+                      font-weight: 600;
+                    }
+                  }
+                }
+                .time{
+                  text-align: right;
+                  font-weight: 600;
+                  font-size: 14px;
+                }
+              }
+              .item-row:last-child{
+                margin-bottom: 0;
+                border-bottom: none;
+                padding-bottom: 0;
+              }
+            }
+          }
+        }
+      }
+      .tab-content.active{
+        display: block;
+      }
+    }
+  }
+}
