--- a/src/styles/manajemen/Navbar.scss
+++ b/src/styles/manajemen/Navbar.scss
@@ -7,6 +7,7 @@
   padding-top: 24px;
   position: relative;
   transition: 0.5s;
+  z-index: 10;
   .btn-collapse{
     position: absolute;
     top: 24px;
