Finalize produk page without table

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,9 @@ p{
 input{
   font-family: 'DM Sans', sans-serif;
 }
+
+* {
+  -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box;    
+  box-sizing: border-box;
+}
