--- a/src/styles/manajemen/Header.scss
+++ b/src/styles/manajemen/Header.scss
@@ -5,7 +5,7 @@
   padding-right: 40px;
   height: 60px;
   align-items: center;
-  border-bottom: 1px solid #DADADA;
+  border-bottom: 1px solid #e5e5e5;
   position: sticky;
   top: 0;
   background-color: #FFFFFF;
@@ -19,10 +19,42 @@
   .profile-container{
     display: flex;
     align-items: center;
-    p{
-      font-size: 16px;
-      font-weight: 600;
-      margin-right: 22px;
+    justify-content: space-between;
+    height: 100%;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    gap: 22px;
+    border: none;
+    background-color: #FFFFFF;
+    padding: 0;
+  }
+  .dropdown-profile{
+    position: absolute;
+    right: 43px;
+    bottom: -60px;
+    background-color: #FFFFFF;
+    width: 176px;
+    height: 60px;
+    border: 1px solid #e5e5e5;
+    border-radius: 0 0 8px 8px;
+    .item{
+      display: flex;
+      width: 100%;
+      justify-content: flex-start;
+      gap: 16px;
+      padding: 0 12px;
+      height: 100%;
+      align-items: center;
+      cursor: pointer;
+      p{
+        color: #000000;
+        font-size: 16px;
+        font-weight: 600;
+      }
+    }
+    .item:hover{
+      background-color: #F4F7FC;
     }
   }
 }
