--- a/src/styles/manajemen/Navbar.scss
+++ b/src/styles/manajemen/Navbar.scss
@@ -67,12 +67,14 @@
       margin-bottom: 7px;
     }
     .nav-item{
+      cursor: pointer;
       padding-left: 16px;
       height: 56px;
       display: flex;
       align-items: center;
       border-top-left-radius: 5px;
       border-bottom-left-radius: 5px;
+      margin-bottom: 7px;
       .icon{
         width: 24px;
         height: 100%;
@@ -81,10 +83,15 @@
         margin-left: 11px;
         font-size: 18px;
         font-weight: 500;
+        text-decoration: underline;
+        text-decoration-color: #081A51;
       }
     }
     .nav-item.active{
       background-color: #1B2B65;
+      .nav-label{
+        text-decoration-color: #1B2B65;
+      }
     }
   }
 }
