--- a/src/styles/lapangan/Aktivitas.scss
+++ b/src/styles/lapangan/Aktivitas.scss
@@ -18,7 +18,7 @@
             padding-left: 6px;
             padding-top: 60px;
             .header{
-                font-family: DM Sans;
+                font-family: 'DM Sans';
                 font-weight: 700;
                 color: #FFFFFF;
                 font-size: 24px;
@@ -37,7 +37,7 @@
                 padding-left: 12px;
                 padding-right: 14px;
                 .date{
-                    font-family: DM Sans;
+                    font-family: 'DM Sans';
                     font-weight: 700;
                     font-size: 14px;
                     color: #31353B;
@@ -50,14 +50,14 @@
                         padding-bottom: 6px;
                     }
                     p{
-                        font-family: Roboto;
+                        font-family: 'DM Sans';
                         font-size: 14px;
                     }
                 }
                 .time{
                     text-align: end;
                     p{
-                        font-family: DM Sans;
+                        font-family: 'DM Sans';
                         font-weight: 700;
                         color: #000000;
                         font-size: 12px;
