--- a/src/styles/lapangan/Navbar.scss
+++ b/src/styles/lapangan/Navbar.scss
@@ -11,6 +11,7 @@
     p{
         font-size: 12px;
         margin-bottom: 0;
+        font-family: 'DM Sans';
     }
     .homebtn{
         padding-top: 18px;
