--- a/src/styles/lapangan/HomeLapangan.scss
+++ b/src/styles/lapangan/HomeLapangan.scss
@@ -12,7 +12,7 @@
             display: block;
             justify-content: space-between;
             .header{
-                font-family: DM Sans;
+                font-family: 'DM Sans';
                 font-weight: 700;
                 color: #FFFFFF;
                 font-size: 24px;
@@ -45,14 +45,14 @@
                         justify-content: space-between;
                         padding-bottom: 11.3px;
                         .scanbarang{
-                            font-family: DM Sans;
+                            font-family: 'DM Sans';
                             font-weight: 700;
                             color: #31353B;
                             font-size: 18px;
                             margin-bottom: 16px;
                         }
                         .detailbarang{
-                            font-family: Roboto;
+                            font-family: 'DM Sans';
                             color: #31353B;
                             font-size: 16px;
                         }
@@ -67,7 +67,7 @@
                         align-items: center;
                         cursor: pointer;
                         p{
-                            font-family: DM Sans;
+                            font-family: 'DM Sans';
                             font-weight: 700;
                             color: #FFFFFF;
                             font-size: 14px;
@@ -87,14 +87,14 @@
                     padding-right: 16px;
                     .textkodebrg{
                         .masukkankodebrg{
-                            font-family: DM Sans;
+                            font-family: 'DM Sans';
                             font-weight: 700;
                             color: #31353B;
                             font-size: 18px;
                             margin-bottom: 16px;
                         }
                         .lihatubahkode{
-                            font-family: Roboto;
+                            font-family: 'DM Sans';
                             color: #31353B;
                             font-size: 16px;
                             margin-bottom: 16px;
@@ -111,7 +111,7 @@
                         .placeholder{
                           position: absolute;
                           top: 16px;
-                          font-family: DM Sans;
+                          font-family: 'DM Sans';
                           font-size: 14px;
                           color: #393939;
                         }
@@ -161,7 +161,7 @@
                 padding-top: 24px;
                 padding-left: 20px;
                 .text{
-                font-family: DM Sans;
+                font-family: 'DM Sans';
                 font-size: 18px;
                 font-weight: 700;
                 color: #1E3032;
@@ -171,7 +171,7 @@
                     padding-top: 34px;
                     cursor: pointer;
                     p{
-                    font-family: Roboto;
+                    font-family: 'DM Sans';
                     font-size: 16px;
                     color: #1E3032;
                     margin-left: 14.25px;
