--- a/src/styles/lapangan/PDP.scss
+++ b/src/styles/lapangan/PDP.scss
@@ -27,7 +27,7 @@
                 .header{
                     color: #FFFFFF;
                     font-size: 24px;
-                    font-family: DM Sans;
+                    font-family: 'DM Sans';
                     font-weight: 700;
                 }
             }
@@ -54,13 +54,13 @@
                     .namaproduk{
                         color: #31353B;
                         font-size: 18px;
-                        font-family: DM Sans;
+                        font-family: 'DM Sans';
                         font-weight: 700;
                     }
                     .updateproduk{
                         color: #31353B;
                         font-size: 16px;
-                        font-family: Roboto;
+                        font-family: 'DM Sans';
                     }
                 }
                 .infostock{
@@ -70,12 +70,12 @@
                     margin-bottom: 16px;
                     padding-right: 5px;
                     .totalstock{
-                        font-family: Roboto;
+                        font-family: 'DM Sans';
                         font-size: 14px;
                         color: #31353B;
                     }
                     .stock{
-                        font-family: DM Sans;
+                        font-family: 'DM Sans';
                         font-size: 14px;
                         color: #31353B;
                         font-weight: 700;
@@ -86,12 +86,12 @@
                     justify-content: space-between;
                     padding-right: 5px;
                     .textharga{
-                        font-family: Roboto;
+                        font-family: 'DM Sans';
                         font-size: 14px;
                         color: #31353B;
                     }
                     .harga{
-                        font-family: DM Sans;
+                        font-family: 'DM Sans';
                         font-size: 14px;
                         color: #31353B;
                         font-weight: 700;
@@ -122,7 +122,7 @@
                 p{
                     color: #FFFFFF;
                     font-size: 14px;
-                    font-family: DM Sans;
+                    font-family: 'DM Sans';
                     font-weight: 700;
                 }
             }
@@ -158,7 +158,7 @@
                     padding-left: 20px;
                     padding-bottom: 18px;
                     .textup{
-                        font-family: DM Sans;
+                        font-family: 'DM Sans';
                         font-size: 18px;
                         font-weight: 700;
                         color: #1E3032;
@@ -169,12 +169,12 @@
                         padding-right: 23px;
                         padding-top: 16px;
                         .totalstock{
-                            font-family: Roboto;
+                            font-family: 'DM Sans';
                             font-size: 14px;
                             color: #31353B;
                         }
                         .stock{
-                            font-family: DM Sans;
+                            font-family: 'DM Sans';
                             font-size: 14px;
                             color: #31353B;
                             font-weight: 700;
@@ -192,7 +192,7 @@
                     padding-right: 20px;
                     padding-top: 16px;
                     .textjumlah{
-                        font-family: Roboto;
+                        font-family: 'DM Sans';
                         font-size: 14px;
                         padding-bottom: 16px;
                         color: #31353B;
@@ -212,7 +212,7 @@
                         .placeholder{
                           position: absolute;
                           top: 16px;
-                          font-family: DM Sans;
+                          font-family: 'DM Sans';
                           font-size: 14px;
                           color: #393939;
                         }
@@ -240,7 +240,7 @@
                         border-radius: 6px;
                         align-items: center;
                         p{
-                            font-family: DM Sans;
+                            font-family: 'DM Sans';
                             color: #FFFFFF;
                             font-size: 14px;
                             font-weight: 700;
