--- a/src/styles/manajemen/Dashboard.scss
+++ b/src/styles/manajemen/Dashboard.scss
@@ -8,6 +8,16 @@
   }
 }
 
+.e-input-group.e-control-wrapper.e-date-range-wrapper{
+  visibility: hidden;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.e-input-group.e-control-wrapper.e-date-range-wrapper.laporan-one{
+  bottom: 15px;
+}
+
 .container-manajemen-dashboard{
   background-color: #F4F7FC;
   min-height: 100%;
@@ -65,6 +75,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
             .in-out-content{
               display: flex;
               gap: 95px;
@@ -113,7 +124,7 @@
                 justify-content: center;
                 cursor: pointer;
                 width: 172px;
-                height: 40px;
+                height: 52px;
                 background-color: #017EFA;
                 border-radius: 6px;
                 color: #FFFFFF;
@@ -127,7 +138,7 @@
             }
             .search{
               width: 240px;
-              height: 40px;
+              height: 52px;
               background-color: #F5F5F5;
               border-radius: 8px;
               display: flex;
@@ -144,16 +155,20 @@
               input:focus-visible{
                 outline: none;
               }
-              img{
-                cursor: pointer;
+              button{
+                height: 100%;
+                border: none;
+                background-color: transparent;
               }
             }
             .dropdowns{
               display: flex;
               gap: 16px;
+              position: relative;
               .filter{
-                width: 200px;
-                height: 40px;
+                border: none;
+                min-width: 200px;
+                height: 52px;
                 background-color: #F5F5F5;
                 border-radius: 8px;
                 display: flex;
@@ -170,11 +185,24 @@
                   }
                 }
               }
+              .product-select__control{
+                min-width: 244px;
+                height: 52px;
+                background: #F5F5F5;
+                border: none;
+                border-radius: 8px;
+          
+                .product-select__indicators, .product-select-lc__indicators {
+                  .product-select__indicator-separator, .product-select-lc__indicator-separator {
+                    display: none;
+                  }
+                }
+              }
             }
           }
         }
         .head-content.activity{
-          padding-top: 41px;
+          padding-top: 38px;
           padding-bottom: 40px;
         }
         .main-content{
@@ -274,7 +302,7 @@
                 .time{
                   text-align: right;
                   font-weight: 600;
-                  font-size: 14px;
+                  font-size: 16px;
                 }
               }
               .item-row:last-child{
