Finalize filter, query, search

--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -146,6 +146,9 @@
                 color: #017EFA;
                 margin-right: 10px;
               }
+              .filter-remove {
+                cursor: pointer;
+              }
             }
           }
           .reset-filter-title {
