--- a/src/styles/manajemen/Dashboard.scss
+++ b/src/styles/manajemen/Dashboard.scss
@@ -320,3 +320,332 @@
     }
   }
 }
+
+.desktop-view{
+  display: block;
+}
+.mobile-view{
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .desktop-view{
+    display: none;
+  }
+  .mobile-view{
+    display: block;
+  }
+  .container-manajemen-dashboard{
+    position: relative;
+    padding: 0;
+    background-color: #FFFFFF;
+    .dashboard-mobile-header{
+      position: absolute;
+      top: 0;
+      width: 100vw;
+      background-color: #081A51;
+      height: 231px;
+      padding-top: 60px;
+      .container-content-header-mobile{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 18px;
+        padding-right: 16px;
+        p{
+          color: #FFFFFF;
+          font-size: 24px;
+          font-weight: 700;
+        }
+      }
+    }
+    .dashboard-mobile-contents{
+      position: relative;
+      padding-top: 115px;
+      padding-left: 18px;
+      padding-right: 14px;
+      .item{
+        height: 76px;
+        width: 100%;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.16);
+        border-radius: 10px;
+        margin-bottom: 16px;
+        .content-statistics{
+          display: flex;
+          height: 100%;
+          .statistic-item{
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+              width: 42px;
+            }
+            .descriptions{
+              margin-left: 10px;
+              .label-title{
+                font-weight: 500;
+                font-size: 11px;
+                color: #7E8287;
+              }
+              .values{
+                display: flex;
+                align-items: baseline;
+                p{
+                  font-size: 18px;
+                  font-weight: 700;
+                }
+                .label{
+                  font-size: 12px;
+                  margin-left: 5px;
+                }
+              }
+            }
+          }
+        }
+        .tabs-item{
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          height: 100%;
+          padding-left: 18px;
+          padding-right: 14px;
+          .item-label{
+            .item-label-title{
+              font-weight: 700;
+              font-size: 16px;
+              color: #1C1F37;
+              margin-bottom: 7px;
+            }
+            .item-label-subtitle{
+              font-size: 12px;
+              color: #7E8287;
+            }
+          }
+        }
+      }
+    }
+  }
+  .dialog-log-barang, .dialog-activity-barang{
+    width: 100vw;
+    height: 100vh;
+    .header-dialog{
+      width: 100%;
+      height: 115px;
+      background-color: #081A51;
+      display: flex;
+      justify-content: space-between;
+      padding-left: 25px;
+      padding-right: 16px;
+      align-items: flex-end;
+      padding-bottom: 30px;
+      .titles{
+        display: flex;
+        .btn-back-wrapper{
+          margin-right: 20px;
+          display: flex;
+        }
+        .label-title{
+          font-weight: 700;
+          font-size: 24px;
+          color: #FFFFFF;
+        }
+      }
+      .wrap-wrap{
+        height: 25px;
+      }
+      .download-wrapper{
+        display: flex;
+        p{
+          margin-left: 6px;
+          font-weight: 700;
+          font-size: 14px;
+          color: #FFFFFF;
+        }
+      }
+    }
+    .content-dialog-log{
+      .filters{
+        display: flex;
+        padding-left: 16px;
+        padding-right: 16px;
+        align-items: center;
+        height: 54px;
+        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+        .filter-button{
+          margin-right: 16px;
+        }
+        form{
+          width: 100%;
+        }
+        .search{
+          height: 40px;
+          width: 100%;
+          background-color: #F5F5F5;
+          border-radius: 8px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0 12px;
+          input{
+            border: none;
+            background-color: transparent;
+            height: 100%;
+            font-size: 16px;
+            width: 88%;
+          }
+          input:focus-visible{
+            outline: none;
+          }
+          button{
+            height: 100%;
+            border: none;
+            background-color: transparent;
+          }
+        }
+      }
+      .items{
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        max-height: 74vh;
+        overflow-y: scroll;
+      }
+      .log-item{
+        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.16);
+        border-radius: 10px;
+        padding: 12px;
+        .date-and-status, .price-and-value{
+          display: flex;
+          justify-content: space-between;
+          .date{
+            font-weight: 700;
+            font-size: 14px;
+            color: #31353B;
+          }
+          .status-wrapper{
+            border-radius: 16px;
+            color: #FFFFFF;
+            font-weight: 700;
+            font-size: 14px;
+            height: 27px;
+            width: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+          .status-wrapper.masuk{
+            background-color: #30DA88;
+          }
+          .status-wrapper.keluar{
+            background-color: #57A4F0;
+          }
+          .difference, .price{
+            font-size: 14px;
+            color: #31353B;
+          }
+        }
+        .name-and-id{
+          .name{
+            font-weight: 700;
+            font-size: 16px;
+            color: #31353B;
+            margin-bottom: 10px;
+          }
+          .id{
+            font-size: 14px;
+            color: #31353B;
+            margin-bottom: 12px;
+          }
+        }
+      }
+    }
+    .content-dialog-activity{
+      .filters{
+        display: flex;
+        padding-left: 16px;
+        padding-right: 16px;
+        align-items: center;
+        height: 54px;
+        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+        margin-bottom: 16px;
+        .filter-button{
+          margin-right: 16px;
+        }
+      }
+      .activity-items{
+        padding: 0 16px 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        max-height: 74vh;
+        overflow-y: scroll;
+        .date{
+          font-weight: 600;
+          font-size: 14px;
+          color: #31353B;
+          margin-bottom: 16px;
+        }
+        .activity-item{
+          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.16);
+          border-radius: 10px;
+          padding: 12px; 
+
+          .item-row{
+            margin-bottom: 16px;
+            border-bottom: 1px solid #e5e5e5;
+            padding-bottom: 12px;
+            .item-details{
+              display: flex;
+              align-items: center;
+              .img-wrapper{
+                width: 50px;
+                height: 50px;
+                position: relative;
+                overflow: hidden;
+                border-radius: 8px;
+                margin-right: 12px;
+                img{
+                  position: absolute;
+                  width: 100%;
+                  height: 100%;
+                }
+              }
+              .desc{
+                display: flex;
+                flex-wrap: wrap;
+                width: 70%;
+                p{
+                  margin-right: 5px;
+                  font-size: 14px;
+                  line-height: 16px;
+                }
+                .actor, .value{
+                  font-weight: 600;
+                }
+                .item{
+                  color: #017EFA;
+                  text-decoration: underline;
+                  cursor: pointer;
+                  font-weight: 600;
+                }
+              }
+            }
+            .time{
+              text-align: right;
+              font-weight: 600;
+              font-size: 12px;
+            }
+          }
+          .item-row:last-child{
+            margin-bottom: 0;
+            border-bottom: none;
+            padding-bottom: 0;
+          }
+        }
+      }
+    }
+  }
+}
