--- a/src/styles/manajemen/Navbar.scss
+++ b/src/styles/manajemen/Navbar.scss
@@ -110,3 +110,52 @@
     display: none;
   }
 }
+
+@media (max-width: 768px) {
+  .mobile-view{
+    height: 100%;
+  }
+  .container-navbar-manajemen{
+    padding: 0;
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    height: 85px;
+    min-height: unset;
+    background-color: #FFFFFF;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0px 0px 6px rgba(17, 17, 17, 0.129);
+    .nav-items-mobile{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 100%;
+      a{
+        height: 100%;
+        width: 50vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .nav-item-mobile{
+        display: block;
+        text-align: center;
+        p{
+          font-size: 12px;
+          color: #C6C6C6;
+          margin-top: 10px;
+        }
+        img{
+          width: 24px;
+          height: 24px;
+        }
+      }
+      .nav-item-mobile.active{
+        p{
+          color: #017EFA;
+        }
+      }
+    }
+  }
+}
