--- a/src/styles/manajemen/Dashboard.scss
+++ b/src/styles/manajemen/Dashboard.scss
@@ -570,13 +570,15 @@
         align-items: center;
         height: 54px;
         box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
-        margin-bottom: 16px;
         .filter-button{
           margin-right: 16px;
+          img{
+            margin-right: 16px;
+          }
         }
       }
       .activity-items{
-        padding: 0 16px 16px;
+        padding: 16px;
         display: flex;
         flex-direction: column;
         gap: 16px;
@@ -645,6 +647,79 @@
             padding-bottom: 0;
           }
         }
+      }
+    }
+  }
+  .dialog-filter-mobile-dashboard{
+    height: 50vh;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #FFFFFF;
+    .header-filter-mobile{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 20px;
+      width: 100%;
+      margin-bottom: 24px;
+    }
+    .filter-container{
+      padding-left: 16px;
+      padding-right: 16px;
+      .filter{
+        width: 100%;
+        height: 54px;
+        display: flex;
+        align-items: center;
+        margin-bottom: 16px;
+        .content{
+          width: 100%;
+        }
+        .container-select{
+          width: 100%;
+        }
+        .product-select__control{
+          min-width: 100%;
+          height: 52px;
+          background: #F5F5F5;
+          border: none;
+          border-radius: 8px;
+    
+          .product-select__indicators, .product-select-lc__indicators {
+            .product-select__indicator-separator, .product-select-lc__indicator-separator {
+              display: none;
+            }
+          }
+        }
+        .btn-date-mob{
+          border: none;
+          min-width: 100%;
+          height: 52px;
+          background-color: #F5F5F5;
+          border-radius: 8px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding-top: 0px;
+          padding-bottom: 0px;
+          padding-left: 12px;
+          padding-right: 6px;
+          cursor: pointer;
+          div{
+            display: flex;
+            gap: 11px;
+            p{
+              color: #7E8287;
+              font-size: 16px;
+            }
+          }
+          img{
+            opacity: 0.2;
+          }
+        }
+      }
+      .filter:last-child{
+        border-bottom: none;
       }
     }
   }
