--- a/src/styles/lapangan/Aktivitas.scss
+++ b/src/styles/lapangan/Aktivitas.scss
@@ -66,12 +66,19 @@
                 }
                 .time{
                     text-align: end;
+                    padding-bottom: 12px;
                     p{
                         font-family: 'DM Sans';
                         font-weight: 700;
                         color: #000000;
                         font-size: 12px;
                     }
+                }
+                .grayline{
+                    width: 100%;
+                    height: 2px;
+                    background-color:#F3F4F6;
+                    padding-left: unset;
                 }
             }
         }
