--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -237,8 +237,36 @@
               tr.product-description-highlights {
                 background: #FFF;
                 td.product-description-item {
+                  position: relative;
                   text-align: center;
                   padding: 26px;
+                  .product-three-dots-options {
+                    right: 37.5%;
+                    min-width: 238px;
+                    background: #FFF;
+                    position: absolute;
+                    padding: 20px 25px;
+                    border-radius: 10px;
+                    box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
+                    .action-item-wrapper {
+                      list-style-type: none;
+                      margin: 0;
+                      padding: 0;
+                      .action-item {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        color: rgba(0, 0, 0, 0.6);
+                        margin-bottom: 23.5px;
+                      }
+                      .action-item.red-highlight {
+                        color: rgba(189, 30, 30, 0.6);
+                      }
+                      .action-item:last-child {
+                        margin-bottom: 0px;
+                      }
+                    }
+                  }
                 }
                 .item-details {
                   text-align:left!important;
